# rlm

./: pyproject.toml
docs/: complete_rlm_walkthrough.md  externalized_reasoning_complete_guide.md  rlm_architecture_documentation.md  rlm_complete_analysis.md  rlm_feedback.md  rlm_vs_traditional_llm.md
examples/chatgpt-extractor/: ARCHITECTURE_TRACE.md  agent_query.py  chatgpt_extractor.py  streaming_json.py
examples/claude-code-assistant/: AGENT_INSTRUCTIONS.md  HOW_IT_WORKS.md  README.md  deep_rlm_extractor.py  discord_extractor.py  example_usage.py  large_file_processor.py  rlm_context.py  smart_extractor.py
examples/json-explorer/: README.md  USE_CASE_MARKETERS.md  analyze.py  discord_marketing_analysis.py  example_usage.py  pyproject.toml
examples/json-explorer/examples/: custom_analyzer_template.yaml
examples/json-explorer/json_explorer/: __init__.py  aggregator.py  chunker.py  citation.py  config.py  core.py  executor.py  mcp_server.py  query_planner.py  schema.py  trace.py
examples/json-explorer/json_explorer/adapters/: __init__.py  anthropic_adapter.py  base.py  claude_code_adapter.py  codex_adapter.py  mcp_adapter.py  zai_adapter.py
examples/json-explorer/json_explorer/analysis/: __init__.py  base.py  custom.py  marketing.py  product.py  research.py  sentiment.py  specialized.py  support.py
examples/json-explorer/json_explorer/formats/: __init__.py  discord.py  generic.py
examples/json-explorer/json_explorer/storage/: __init__.py  neon.py  r2.py
examples/textbook-qa/: README.md  cleanup_traces.py  fix_references.py  requirements.txt  textbook_qa.py
examples/textbook-qa/sessions/2026-01-03_introductiontoalgorithmsfourthedition/: 00-index.md  01-2026-01-03-binary-search-trees-and-i-solve-binary-s.md  02-2026-01-03-binary-search-trees-give-1-definition-an.md  03-2026-01-03-definition-of-redblack-tree-include-page.md  04-2026-01-03-heap-data-structure-quote-definition-fro.md  05-2026-01-03-heap-give-exact-definition-from-page-229.md  06-2026-01-03-maxheapify-algorithm-copy-pseudocode-exa.md  07-2026-01-03-buildmaxheap-algorithm-copy-exact-pseudo.md  08-2026-01-03-buildmaxheap-algorithm-give-exact-pseudo.md  09-2026-01-03-find-buildmaxheap-algorithm-search-entir.md  10-2026-01-03-buildmaxheap-algorithm-extract-pseudocod.md  11-2026-01-03-definition-of-heap-from-page-229-quote-i.md  12-2026-01-03-maxheapify-algorithm-give-exact-pseudoco.md  13-2026-01-03-quicksort-give-pseudocode-from-textbook-.md  14-2026-01-03-merge-sort-give-pseudocode-from-page-40-.md  15-2026-01-03-binary-search-give-pseudocode-with-page-.md  16-2026-01-03-redblack-tree-give-5-properties-from-pag.md  17-2026-01-03-hash-table-and-it-work.md  18-2026-01-03-binary-search-trees.md  19-2026-01-03-binary-search-tree.md  20-2026-01-03-dynamic-programming.md  TRACE-10-build-max-heap.md  TRACE-13-quicksort.md  TRACE-14-merge-sort.md  TRACE-15-binary-search.md  TRACE-16-red-black-tree.md  TRACE-17-hash-table.md  TRACE-18-binary-search-trees.md  TRACE-19-what-is-binary-search-tree.md  TRACE-20-what-is-dynamic-programming.md  session.json
unified-rlm-mcp/: .gitignore  .npmignore  CHANGELOG.md  PRODUCTION.md  README.md  cleanup.sh  mcp-config-example.json  package.json  tsconfig.json
unified-rlm-mcp/src/: index.ts
unified-rlm-mcp/test/: README.md  test-all.js  test-lfm2.5.js  test-qwen.js
