[project]
name = "json-explorer"
version = "0.1.0"
description = "Query massive JSON files with small LLMs using RLM-style recursive exploration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AGI Inc", email = "team@agi.inc"}
]
keywords = ["json", "llm", "rlm", "mcp", "ai", "query", "discord", "export", "neon", "r2", "cloudflare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]
mcp = ["mcp>=1.0.0"]
http = ["flask>=3.0.0"]

# Storage backends (Neon + R2)
neon = ["asyncpg>=0.29.0"]
r2 = ["boto3>=1.35.0"]
storage = [
    "asyncpg>=0.29.0",  # Neon PostgreSQL
    "boto3>=1.35.0",    # Cloudflare R2 (S3 compatible)
]

# CLI adapters (Claude Code, Codex)
# No extra deps needed - uses subprocess

# Full installation with all features
all = [
    "openai>=1.50.0",
    "mcp>=1.0.0",
    "flask>=3.0.0",
    "asyncpg>=0.29.0",
    "boto3>=1.35.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
json-explorer = "json_explorer.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["json_explorer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

